--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Flexienok Chrome",
-  "version": "1.1.1",
-  "description": "Flexienok, now discretely in the corner of your browser!",
+  "version": "1.2.1",
+  "description": "Flexienok, now discreetly in the corner of your browser!",
   "icons": {
     "16": "images/icon16.png",
     "48": "images/icon48.png",
@@ -37,6 +37,12 @@
       "js": ["js/injectGetToken.js"]
     }
   ],
-  "web_accessible_resources": ["js/getToken.js", "js/injectGetToken.js"],
+  "content_security_policy": "script-src 'self' https://cdnjs.cloudflare.com; object-src 'self'",
+  "web_accessible_resources": [
+    "js/getToken.js",
+    "js/injectGetToken.js",
+    "https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.min.js",
+    "https://cdnjs.cloudflare.com/ajax/libs/js-polyfills/0.1.43/polyfill.min.js"
+  ],
   "manifest_version": 2
 }
